namespace Meta.Log.Core.Interfaces;

public interface IFilterEngine
{
    
}