namespace Meta.Log.Core.Interfaces;

public interface IParser
{
    
}